BROKERS/RABBITMQ/sqrabbitmq100/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: brk-srv
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management  # Imagen de RabbitMQ con la interfaz de administración
        ports:
        - containerPort: 5672  # Puerto de RabbitMQ para conexiones
        - containerPort: 15672 # Puerto para la interfaz de administración
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
