BROKERS/RABBITMQ/sqrabbitmq100/templates/elk-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: brk-srv
  labels:
    app: elasticsearch
spec:
  type: ExternalName
  externalName: elasticsearch.logs-srv.svc.cluster.local
