BROKERS/RABBITMQ/sqrabbitmq100/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: brk-srv
  labels:
    app: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672  # Puerto para la comunicación AMQP
    name: amqp
  - port: 15671
    targetPort: 15671  # Puerto para la interfaz de administración
    name: management
  selector:
    app: rabbitmq
  type: ClusterIP  # Cambiar a LoadBalancer si necesitas acceso externo directo
