BROKERS/RABBITMQ/sqrabbitmq100/templates/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: brk-srv  # Namespace donde está el servicio de RabbitMQ
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/router.entrypoints: websecure
    nginx.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx  
  rules:
    - host: rabbitmq.smartquail.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service  
                port:
                  name: management  
  tls:
    - secretName: rabbitmq-smartquail-io-tls 
      hosts:
        - rabbitmq.smartquail.io
